--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                         <p class="text-gray-700 leading-relaxed mb-4">Built an end-to-end AI-powered chatbot integrated into a web application. Developed backend services using Springboot to handle user queries, process natural language using OpenAI's GPT models, and manage conversation context. Created a responsive React.js frontend for seamless user interaction.</p>
                         <a href="#" target="_blank" class="inline-flex items-center px-4 py-2 bg-gray-900 text-white font-semibold rounded-lg hover:bg-gray-700 transition duration-300">
                             <i data-lucide="github" class="h-5 w-5 mr-2"></i>
-                            Project Review (Link Placeholder)
+                            Project Review
                         </a>
 
                     </div>
@@ -785,3 +785,4 @@
 </body>
 
 </html>
+
