--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                         <p class="text-gray-700 leading-relaxed mb-4">Built an end-to-end AI-powered chatbot integrated into a web application. Developed backend services using Springboot to handle user queries, process natural language using OpenAI's GPT models, and manage conversation context. Created a responsive React.js frontend for seamless user interaction.</p>
                         <a href="#" target="_blank" class="inline-flex items-center px-4 py-2 bg-gray-900 text-white font-semibold rounded-lg hover:bg-gray-700 transition duration-300">
                             <i data-lucide="github" class="h-5 w-5 mr-2"></i>
-                            Project Review
+                            
                         </a>
 
                     </div>
@@ -404,24 +404,24 @@
                     <div class="bg-white p-6 rounded-xl shadow-lg text-center fade-in">
                         <i data-lucide="award" class="h-10 w-10 text-[--primary] mx-auto mb-4"></i>
                         <h4 class="text-xl font-semibold mb-2">Full Stack Java Developer Certificate</h4>
-                        <a href="#" target="_blank" class="text-sm text-blue-600 hover:text-blue-800 font-medium">View Credential</a>
+                        <a href="https://drive.google.com/file/d/1ukJcYv644MkmY7TyWwhEf-WZMoPVwQMo/view?usp=sharing" target="_blank" class="text-sm text-blue-600 hover:text-blue-800 font-medium">View Credential</a>
                     </div>
                     <!-- Cert 2 -->
                     <div class="bg-white p-6 rounded-xl shadow-lg text-center fade-in" style="transition-delay: 0.1s;">
                         <i data-lucide="award" class="h-10 w-10 text-[--primary] mx-auto mb-4"></i>
-                        <h4 class="text-xl font-semibold mb-2">Python Certificate</h4>
-                        <a href="#" target="_blank" class="text-sm text-blue-600 hover:text-blue-800 font-medium">View Credential</a>
+                        <h4 class="text-xl font-semibold mb-2">Java Certificate</h4>
+                        <a href="https://drive.google.com/file/d/15cAlAXkPrsFj9fuEEdeJSsrBj_a8gn_M/view?usp=drive_link" target="_blank" class="text-sm text-blue-600 hover:text-blue-800 font-medium">View Credential</a>
                     </div>
                     <div class="bg-white p-6 rounded-xl shadow-lg text-center fade-in" style="transition-delay: 0.2s;">
                         <i data-lucide="award" class="h-10 w-10 text-[--primary] mx-auto mb-4"></i>
                         <h4 class="text-xl font-semibold mb-2">Coursera: Springboot Certificate</h4>
-                        <a href="#" target="_blank" class="text-sm text-blue-600 hover:text-blue-800 font-medium">View Credential</a>
+                        <a href="https://drive.google.com/file/d/1FEznJWMlQjhdraoYbMRpffTQESWIp9ad/view?usp=sharing" target="_blank" class="text-sm text-blue-600 hover:text-blue-800 font-medium">View Credential</a>
                     </div>
                     <!-- Cert 3 -->
                     <div class="bg-white p-6 rounded-xl shadow-lg text-center fade-in" style="transition-delay: 0.3s;">
                         <i data-lucide="award" class="h-10 w-10 text-[--primary] mx-auto mb-4"></i>
                         <h4 class="text-xl font-semibold mb-2">Postman API Expert Certificate</h4>
-                        <a href="#" target="_blank" class="text-sm text-blue-600 hover:text-blue-800 font-medium">View Credential</a>
+                        <a href="https://drive.google.com/file/d/1nMuUffAmRYKM0TWjAbvRCtzjZGK-ziRQ/view?usp=sharing" target="_blank" class="text-sm text-blue-600 hover:text-blue-800 font-medium">View Credential</a>
                     </div>
                 </div>
             </div>
@@ -785,4 +785,5 @@
 </body>
 
 </html>
+
 
